config/istio-config/ingressgateway-fluent-bit-forwarder-daemonset.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: ingressgateway-fluent-bit-forwarder
  namespace: cf-system
  labels:
    app: ingressgateway-fluent-bit-forwarder
spec:
  selector:
    matchLabels:
      app: ingressgateway-fluent-bit-forwarder
  template:
    metadata:
      labels:
        app: ingressgateway-fluent-bit-forwarder
    spec:
      containers:
      - name: fluent-bit
        image: fluent/fluent-bit
        resources:
          limits:
            memory: 100Mi
          requests:
            cpu: 10m
            memory: 10Mi
        volumeMounts:
        - name: fluent-bit-config
          mountPath: /fluent-bit/etc
        - name: varlog
          mountPath: /var/log
        - name: dockercontainers
          mountPath: /var/lib/docker/containers
          readOnly: true
      terminationGracePeriodSeconds: 10
      volumes:
      - name: fluent-bit-config
        configMap:
          name: ingressgateway-fluent-bit-forwarder-config
      - name: varlog
        hostPath:
          path: /var/log
      - name: dockercontainers
        hostPath:
          path: /var/lib/docker/containers
